--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'English poetry'
 - !lcc 'PR'
+- GITenberg
 title: A Selection from the Works of Frederick Locker
 url: http://www.gutenberg.org/ebooks/38463
